--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,10 +1,14 @@
 pipeline {
   agent any
+
   tools{
     maven 'maven 3.6.1'
   }
   stages{
     stage("build"){
+      when{
+        changeset "**/worker/**"
+      }
       steps{
         echo 'Compiling worker app'
         dir('worker'){
@@ -13,6 +17,9 @@ pipeline {
       }
     }
     stage("test"){
+      when{
+        changeset "**/worker/**"
+      }
       steps{
         echo 'Running Unit Tests on worker app'
         dir('worker'){
@@ -21,17 +28,21 @@ pipeline {
       }
     }
     stage("package"){
+      when{
+        branch 'master'
+        changeset "**/worker/**"
+      }
       steps{
         echo 'Packaging worker app'
         dir('worker'){
           sh 'mvn package -DskipTests'
+          archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
         }
       }
     }
   }
   post{
     always{
-      archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
       echo 'Building multibranch pipeline for worker is completed..'
     }
   }
