--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -7,6 +7,7 @@ pipeline {
   }
 
   stages{
+
     stage("build"){
       when{
         changeset "**/worker/**"
@@ -18,6 +19,7 @@ pipeline {
         }
       }
     }
+
     stage("test"){
       when{
         changeset "**/worker/**"
@@ -29,6 +31,7 @@ pipeline {
         }
       }
     }
+
     stage("package"){
       when{
         branch 'master'
@@ -42,6 +45,18 @@ pipeline {
         }
       }
     }
+
+    stage('docker-package'){
+      agent any
+      steps{
+        docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
+          def workerImage = docker.build("albertgoma/worker:v${env.BUILD_ID}", "./ worker")
+          workerImage.push()
+          workerImage.push("latest")
+        }
+      }
+    }
+
   }
   post{
     always{
