corrected error in worker Jenkinsfile

--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -49,10 +49,13 @@ pipeline {
     stage('docker-package'){
       agent any
       steps{
-        docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
-          def workerImage = docker.build("albertgoma/worker:v${env.BUILD_ID}", "./ worker")
-          workerImage.push()
-          workerImage.push("latest")
+        echo 'Packaging worker app with docker'
+        script{
+          docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
+            def workerImage = docker.build("albertgoma/worker:v${env.BUILD_ID}", "./ worker")
+            workerImage.push()
+            workerImage.push("latest")
+          }
         }
       }
     }
